@@ -49,6 +49,11 @@ tasks.register('run', JavaExec) {
 	mainClass = pluginMainClass
 
 	jvmArgs "-ea"
+	if (org.gradle.internal.os.OperatingSystem.current().isMacOsX()) {
+		jvmArgs "--add-opens", "java.desktop/com.apple.eawt=ALL-UNNAMED",
+			"--add-opens", "java.desktop/com.apple.eawt.event=ALL-UNNAMED",
+			"--add-opens", "java.desktop/com.apple.laf=ALL-UNNAMED"
+	}
 	args "--developer-mode", "--debug"
 }
 
